Set up of eureka naming server and registered the currency conversion and curreny exchange service to the naming server

--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.password=password
 spring.jpa.show-sql=true
 
 #spring.h2.console.enabled=true
+eureka.client.service-url.default-zoe=http://localhost:8761/eureka
