--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=currency-conversion-service
 server.port=8100
 spring.cloud.config.uri=http://localhost:8888
 currency-exchange-service.ribbon.listOfServers=http://localhost:8000,http://localhost:8001
+eureka.client.service-url.default-zoe=http://localhost:8761/eureka
